kubernetes/party-battle/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: party-battle-frontend
  labels:
    app: party-battle-frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: party-battle-frontend
  template:
    metadata:
      labels:
        app: party-battle-frontend
    spec:
      containers:
        - name: party-battle-frontend
          image: ghcr.io/thirty-degrees/frontend-party-battle-web:160ed214464ad6fe55969f651f15e5cbb9e7dcd7
          ports:
            - name: web
              containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
