kubernetes/party-battle/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: party-battle-frontend

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
  selector:
    app: party-battle-frontend
